# legged_control

./: README.md
legged_controllers/: CMakeLists.txt  package.xml
legged_controllers/config/: joy.yaml  qm.rviz
legged_controllers/config/aliengo/: reference.info  task.info
legged_controllers/include/legged_controllers/: GaitJoyPublisher.h  LeggedController.h  TargetTrajectoriesPublisher.h
legged_controllers/launch/: load_controller.launch  rviz.launch
legged_controllers/src/: GaitJoyPublisher.cpp  LeggedController.cpp  TargetTrajectoriesPublisher.cpp
legged_estimation/: CMakeLists.txt  package.xml
legged_estimation/cfg/: param.cfg
legged_estimation/include/legged_estimation/: LinearKalmanFilter.h  StateEstimateBase.h
legged_estimation/src/: LinearKalmanFilter.cpp  StateEstimateBase.cpp
legged_examples/legged_unitree/legged_unitree_description/launch/: empty_world.launch
legged_examples/legged_unitree/legged_unitree_hw/config/: aliengo.yaml
legged_examples/legged_unitree/legged_unitree_hw/launch/: legged_unitree_hw.launch
legged_interface/src/: LeggedInterface.cpp
legged_wbc/: CMakeLists.txt  package.xml
legged_wbc/config/: weight.cfg
legged_wbc/include/legged_wbc/: WbcBase.h  WeightedWbc.h
legged_wbc/src/: HierarchicalWbc.cpp  WbcBase.cpp  WeightedWbc.cpp
