<?xml version="1.0"?>
<package format="2">
    <name>legged_wbc</name>
    <version>0.0.0</version>
    <description>Whole body control</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>ocs2_msgs</depend>
    <depend>ocs2_ros_interfaces</depend>
    <depend>ocs2_legged_robot</depend>
    <depend>pinocchio</depend>
</package>
